# app/Http/Requests/ResetPasswordRequest.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+class ResetPasswordRequest extends BaseFormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+        return [
+            'email' => [Rule::requiredIf(!$this->get('phone_number')), 'email'],
+            'phone_number' => [Rule::requiredIf(!$this->get('email'))],
+            'password' => 'required|min:8|confirmed',
+            'password_confirmation' => 'required|min:8',
+        ];
+    }
+}
